[package]
name = "serde-envfile"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0 OR EUPL-1.2"
repository = "https://github.com/lucagoslar/serde-envfile"
authors = ["Luca Goslar <git@lucagoslar.de>"]
description = """
♻️ Deserialize and serialize environment variables.
"""
keywords = ["serde", "env", "serialization", "deserialization"]

[dependencies]
cfg-if = "1.0"
dotenvy = "0.15"
envy = "0.4"
indexmap = { version = "2.8.0", optional = true, features = ["serde"] }
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.19"

[features]
debug = ["dep:log"]

# Make serde_envfile::Value use a representation which maintains insertion order.
# This allows data to be read into a Value and written back to a envfile string
# while preserving the order of map keys in the input.
preserve_order = ["dep:indexmap"]
